Refine common options implementation (#89)
Signed-off-by: David Greven <fixed-term.David.Greven@de.bosch.com>
Signed-off-by: Sebastian Becker <Sebastian.Becker@de.bosch.com>